[Parse] Improve error for defaulted accessor in a protocol property. SR-13963