lib/Parse/ParseDecl.cpp
@@ -5817,9 +5817,15 @@ ParserStatus Parser::parseGetSet(ParseDeclOptions Flags,
                                  existingAccessor);
     }
 
-    // There's no body in the limited syntax.
-    if (parsingLimitedSyntax)
+    // There's should be no body in the limited syntax.
+    if (parsingLimitedSyntax) {
+      // If there ~is~ a body in the limited syntax, alert that accessors can not
+      // be implemented.
+      if (Tok.is(tok::l_brace))
+        diagnose(Tok, diag::unexpected_getset_implementation_in_protocol,
+                 getAccessorNameForDiagnostic(Kind, /*article*/ false));
       continue;
+    }
 
     // It's okay not to have a body if there's an external asm name.
     if (!Tok.is(tok::l_brace)) {
